bugfix show abc of quran and jumping

--- a/public_html/static/css/scss/font/_bismillah.scss
+++ b/public_html/static/css/scss/font/_bismillah.scss
@@ -1,6 +1,6 @@
 
 /* bismillah fotn*/
-@font-face{font-family:bismillah;src:url(../fonts/bismillah/bismillah.eot);src:url(../fonts/bismillah/bismillah.eot) format("embedded-opentype"),url(../fonts/bismillah/bismillah.ttf) format("truetype"),url(../fonts/bismillah/bismillah.woff) format("woff"),url(../images/bismillah/bismillah.svg) format("svg");font-weight:400;font-style:normal}
+@font-face{font-family:bismillah;src:url(../fonts/bismillah/bismillah.eot);src:url(../fonts/bismillah/bismillah.eot) format("embedded-opentype"),url(../fonts/bismillah/bismillah.ttf) format("truetype"),url(../fonts/bismillah/bismillah.woff) format("woff"),url(../images/bismillah/bismillah.svg) format("svg");font-weight:400;font-display:block;}
 .bismillah {
     font-family: bismillah;
     font-size: 6em;
