--- a/public_html/static/css/scss/quran/_aye.scss
+++ b/public_html/static/css/scss/quran/_aye.scss
@@ -1,4 +1,7 @@
 // all styles of quran ayat
+.preload .Quran i{
+    opacity: 0;
+}
 .Quran i{
     font-weight: 400;
     font-style: normal;
@@ -6,6 +9,7 @@
     padding:0 1px;
     transition: 0.3s;
     border-bottom: 1px solid transparent;
+    opacity: 1;
 }
 .Quran i[title], .Quran i[data-tippy-title]{
     cursor: help;
