--- a/public_html/static/css/scss/website/_base.scss
+++ b/public_html/static/css/scss/website/_base.scss
@@ -17,6 +17,10 @@ html:before{
 body{
 	min-height: 100%;
 }
+body.preload::before{
+	content: "";
+	background: #2B3134;
+}
 #main{
 	z-index: 10;
 	position: relative;
